priv/deploy-dev-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web0
spec:
  serviceName: "web0"
  replicas: 3
  selector:
    matchLabels:
      app: web0
  template:
    metadata:
      labels:
        app: web0
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: web0
        image: yhuangsh/web0-dev-build:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
          name: web0
        livenessProbe:
          httpGet:
            path: /live
            port: 7000
            httpHeaders:
            - name: X-Web0-Probe-Header
              value: live
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 7000
            httpHeaders:
            - name: X-Web0-Probe-Header
              value: ready
          initialDelaySeconds: 3
          periodSeconds: 10
