priv/deploy-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web0
  labels:
    app: web0
spec:
  selector: 
    app: web0
  ports:
  - port: 7000
    name: web0
  clusterIP: None
